--- a/wordle/scary/style.css
+++ b/wordle/scary/style.css
@@ -272,3 +272,27 @@ h1 {
         background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 100%);
     }
 }
+
+#fullscreen-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000; /* Fully black */
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+    text-align: center;
+    z-index: 9999;
+}
+
+    #fullscreen-overlay p {
+        margin-top: 20px;
+        font-size: 1.2rem;
+    }
+
+
