--- a/wordle/fortnite/style.css
+++ b/wordle/fortnite/style.css
@@ -310,3 +310,25 @@ h1 {
         opacity: 1;
         transform: translate(-50%, -50%) scale(1);
     }
+
+#fullscreen-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000; /* Fully black */
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+    text-align: center;
+    z-index: 9999;
+}
+
+    #fullscreen-overlay p {
+        margin-top: 20px;
+        font-size: 1.2rem;
+    }
