--- a/severance/style.css
+++ b/severance/style.css
@@ -308,3 +308,26 @@ html, body {
     transition: transform 1s ease-out; /* Increased transition duration for slower zoom */
     will-change: transform; /* Hint to browser for optimization */
 }
+
+
+#fullscreen-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000; /* Fully black */
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+    text-align: center;
+    z-index: 9999;
+}
+
+    #fullscreen-overlay p {
+        margin-top: 20px;
+        font-size: 1.2rem;
+    }
